--- a/Task3Assessment.ipynb
+++ b/Task3Assessment.ipynb
@@ -6,77 +6,247 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-11-17T16:42:57.528130Z",
-     "start_time": "2024-11-17T16:42:56.945710Z"
+     "end_time": "2024-11-18T20:24:49.018916Z",
+     "start_time": "2024-11-18T20:24:48.977841Z"
     }
    },
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
     "df = pd.read_csv('updated_NSCH_Vision_Health_Data.csv')\n",
     "\n",
     "# Display the first few rows of the dataset\n",
-    "print(df.head())"
+    "df.head()"
    ],
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   YearStart  YearEnd LocationAbbr LocationDesc Datasource  \\\n",
-      "0       2016     2017           US     National       NSCH   \n",
-      "1       2016     2017           US     National       NSCH   \n",
-      "2       2016     2017           OH         Ohio       NSCH   \n",
-      "3       2016     2017           TN    Tennessee       NSCH   \n",
-      "4       2016     2017           UT         Utah       NSCH   \n",
-      "\n",
-      "                 Topic       Category  \\\n",
-      "0  Service Utilization           Need   \n",
-      "1  Service Utilization           Need   \n",
-      "2  Service Utilization      Screening   \n",
-      "3  Service Utilization  Provider Type   \n",
-      "4  Service Utilization           Need   \n",
-      "\n",
-      "                                            Question  \\\n",
-      "0  Percentage of children who needed vision care ...   \n",
-      "1  Percentage of children who needed vision care ...   \n",
-      "2  Percentage of children who have ever had their...   \n",
-      "3  Percentage of children who have ever had their...   \n",
-      "4  Percentage of children who needed vision care ...   \n",
-      "\n",
-      "                       Response         Age  ... LocationID TopicID  \\\n",
-      "0                           Yes  0-17 years  ...         59    TUTL   \n",
-      "1                           Yes  0-17 years  ...         59    TUTL   \n",
-      "2                           Yes  0-17 years  ...         39    TUTL   \n",
-      "3  Eye doctor or eye specialist  0-17 years  ...         47    TUTL   \n",
-      "4                           Yes  0-17 years  ...         49    TUTL   \n",
-      "\n",
-      "  CategoryID QuestionID ResponseID   AgeID GenderID RaceEthnicityID  \\\n",
-      "0      CNEED     CHNEED       RYES  AGE017       GF             OTH   \n",
-      "1      CNEED     CHNEED       RYES  AGE017     GALL         ALLRACE   \n",
-      "2      CSCRN     CHSCRN       RYES  AGE017       GM             OTH   \n",
-      "3      CPTYP     CHPTYP     REYESP  AGE017       GM             OTH   \n",
-      "4      CNEED     CHNEED       RYES  AGE017     GALL             BLK   \n",
-      "\n",
-      "  RiskFactorID RiskFactorResponseID  \n",
-      "0       RFAPAR                RFTOT  \n",
-      "1       RFAPAR                RFTOT  \n",
-      "2       RFAPAR                RFTOT  \n",
-      "3       RFAPAR                RFTOT  \n",
-      "4       RFAPAR                RFTOT  \n",
-      "\n",
-      "[5 rows x 25 columns]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "   YearStart  YearEnd LocationAbbr LocationDesc Datasource  \\\n",
+       "0       2016     2017           US     National       NSCH   \n",
+       "1       2016     2017           US     National       NSCH   \n",
+       "2       2016     2017           OH         Ohio       NSCH   \n",
+       "3       2016     2017           TN    Tennessee       NSCH   \n",
+       "4       2016     2017           UT         Utah       NSCH   \n",
+       "\n",
+       "                 Topic       Category  \\\n",
+       "0  Service Utilization           Need   \n",
+       "1  Service Utilization           Need   \n",
+       "2  Service Utilization      Screening   \n",
+       "3  Service Utilization  Provider Type   \n",
+       "4  Service Utilization           Need   \n",
+       "\n",
+       "                                            Question  \\\n",
+       "0  Percentage of children who needed vision care ...   \n",
+       "1  Percentage of children who needed vision care ...   \n",
+       "2  Percentage of children who have ever had their...   \n",
+       "3  Percentage of children who have ever had their...   \n",
+       "4  Percentage of children who needed vision care ...   \n",
+       "\n",
+       "                       Response         Age  ... LocationID TopicID  \\\n",
+       "0                           Yes  0-17 years  ...         59    TUTL   \n",
+       "1                           Yes  0-17 years  ...         59    TUTL   \n",
+       "2                           Yes  0-17 years  ...         39    TUTL   \n",
+       "3  Eye doctor or eye specialist  0-17 years  ...         47    TUTL   \n",
+       "4                           Yes  0-17 years  ...         49    TUTL   \n",
+       "\n",
+       "  CategoryID QuestionID ResponseID   AgeID  GenderID RaceEthnicityID  \\\n",
+       "0      CNEED     CHNEED       RYES  AGE017        GF             OTH   \n",
+       "1      CNEED     CHNEED       RYES  AGE017      GALL         ALLRACE   \n",
+       "2      CSCRN     CHSCRN       RYES  AGE017        GM             OTH   \n",
+       "3      CPTYP     CHPTYP     REYESP  AGE017        GM             OTH   \n",
+       "4      CNEED     CHNEED       RYES  AGE017      GALL             BLK   \n",
+       "\n",
+       "  RiskFactorID RiskFactorResponseID  \n",
+       "0       RFAPAR                RFTOT  \n",
+       "1       RFAPAR                RFTOT  \n",
+       "2       RFAPAR                RFTOT  \n",
+       "3       RFAPAR                RFTOT  \n",
+       "4       RFAPAR                RFTOT  \n",
+       "\n",
+       "[5 rows x 26 columns]"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>YearStart</th>\n",
+       "      <th>YearEnd</th>\n",
+       "      <th>LocationAbbr</th>\n",
+       "      <th>LocationDesc</th>\n",
+       "      <th>Datasource</th>\n",
+       "      <th>Topic</th>\n",
+       "      <th>Category</th>\n",
+       "      <th>Question</th>\n",
+       "      <th>Response</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>...</th>\n",
+       "      <th>LocationID</th>\n",
+       "      <th>TopicID</th>\n",
+       "      <th>CategoryID</th>\n",
+       "      <th>QuestionID</th>\n",
+       "      <th>ResponseID</th>\n",
+       "      <th>AgeID</th>\n",
+       "      <th>GenderID</th>\n",
+       "      <th>RaceEthnicityID</th>\n",
+       "      <th>RiskFactorID</th>\n",
+       "      <th>RiskFactorResponseID</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>US</td>\n",
+       "      <td>National</td>\n",
+       "      <td>NSCH</td>\n",
+       "      <td>Service Utilization</td>\n",
+       "      <td>Need</td>\n",
+       "      <td>Percentage of children who needed vision care ...</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>0-17 years</td>\n",
+       "      <td>...</td>\n",
+       "      <td>59</td>\n",
+       "      <td>TUTL</td>\n",
+       "      <td>CNEED</td>\n",
+       "      <td>CHNEED</td>\n",
+       "      <td>RYES</td>\n",
+       "      <td>AGE017</td>\n",
+       "      <td>GF</td>\n",
+       "      <td>OTH</td>\n",
+       "      <td>RFAPAR</td>\n",
+       "      <td>RFTOT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>US</td>\n",
+       "      <td>National</td>\n",
+       "      <td>NSCH</td>\n",
+       "      <td>Service Utilization</td>\n",
+       "      <td>Need</td>\n",
+       "      <td>Percentage of children who needed vision care ...</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>0-17 years</td>\n",
+       "      <td>...</td>\n",
+       "      <td>59</td>\n",
+       "      <td>TUTL</td>\n",
+       "      <td>CNEED</td>\n",
+       "      <td>CHNEED</td>\n",
+       "      <td>RYES</td>\n",
+       "      <td>AGE017</td>\n",
+       "      <td>GALL</td>\n",
+       "      <td>ALLRACE</td>\n",
+       "      <td>RFAPAR</td>\n",
+       "      <td>RFTOT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>OH</td>\n",
+       "      <td>Ohio</td>\n",
+       "      <td>NSCH</td>\n",
+       "      <td>Service Utilization</td>\n",
+       "      <td>Screening</td>\n",
+       "      <td>Percentage of children who have ever had their...</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>0-17 years</td>\n",
+       "      <td>...</td>\n",
+       "      <td>39</td>\n",
+       "      <td>TUTL</td>\n",
+       "      <td>CSCRN</td>\n",
+       "      <td>CHSCRN</td>\n",
+       "      <td>RYES</td>\n",
+       "      <td>AGE017</td>\n",
+       "      <td>GM</td>\n",
+       "      <td>OTH</td>\n",
+       "      <td>RFAPAR</td>\n",
+       "      <td>RFTOT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>TN</td>\n",
+       "      <td>Tennessee</td>\n",
+       "      <td>NSCH</td>\n",
+       "      <td>Service Utilization</td>\n",
+       "      <td>Provider Type</td>\n",
+       "      <td>Percentage of children who have ever had their...</td>\n",
+       "      <td>Eye doctor or eye specialist</td>\n",
+       "      <td>0-17 years</td>\n",
+       "      <td>...</td>\n",
+       "      <td>47</td>\n",
+       "      <td>TUTL</td>\n",
+       "      <td>CPTYP</td>\n",
+       "      <td>CHPTYP</td>\n",
+       "      <td>REYESP</td>\n",
+       "      <td>AGE017</td>\n",
+       "      <td>GM</td>\n",
+       "      <td>OTH</td>\n",
+       "      <td>RFAPAR</td>\n",
+       "      <td>RFTOT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>UT</td>\n",
+       "      <td>Utah</td>\n",
+       "      <td>NSCH</td>\n",
+       "      <td>Service Utilization</td>\n",
+       "      <td>Need</td>\n",
+       "      <td>Percentage of children who needed vision care ...</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>0-17 years</td>\n",
+       "      <td>...</td>\n",
+       "      <td>49</td>\n",
+       "      <td>TUTL</td>\n",
+       "      <td>CNEED</td>\n",
+       "      <td>CHNEED</td>\n",
+       "      <td>RYES</td>\n",
+       "      <td>AGE017</td>\n",
+       "      <td>GALL</td>\n",
+       "      <td>BLK</td>\n",
+       "      <td>RFAPAR</td>\n",
+       "      <td>RFTOT</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 26 columns</p>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "execution_count": 2
+   "execution_count": 24
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-17T17:12:24.774712Z",
-     "start_time": "2024-11-17T17:12:24.732079Z"
+     "end_time": "2024-11-18T16:34:38.480476Z",
+     "start_time": "2024-11-18T16:34:38.301760Z"
     }
    },
    "cell_type": "code",
@@ -102,13 +272,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 28
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-17T17:26:25.325005Z",
-     "start_time": "2024-11-17T17:26:24.913510Z"
+     "end_time": "2024-11-18T16:47:23.726400Z",
+     "start_time": "2024-11-18T16:47:23.322516Z"
     }
    },
    "cell_type": "code",
@@ -146,13 +316,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 40
+   "execution_count": 20
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-17T17:20:11.764427Z",
-     "start_time": "2024-11-17T17:20:11.504177Z"
+     "end_time": "2024-11-18T16:45:52.859693Z",
+     "start_time": "2024-11-18T16:45:52.562646Z"
     }
    },
    "cell_type": "code",
@@ -163,7 +333,7 @@
     "                    (df['LocationDesc'] != 'National') &\n",
     "                    (df['Gender'].isin(['Male', 'Female', 'All genders']))]\n",
     "\n",
-    "# Create a pivot table\n",
+    "\n",
     "pivot_data = screening_data.pivot_table(values='Data_Value',\n",
     "                                        index='LocationDesc',\n",
     "                                        columns='Gender',\n",
@@ -205,7 +375,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 36
+   "execution_count": 18
   }
  ],
  "metadata": {
