--- a/Task3Assessment.ipynb
+++ b/Task3Assessment.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-12-05T19:29:35.585521Z",
-     "start_time": "2024-12-05T19:29:35.553244Z"
+     "end_time": "2024-12-11T13:03:09.571436Z",
+     "start_time": "2024-12-11T13:03:09.526463Z"
     }
    },
    "source": [
@@ -193,14 +193,14 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-05T19:29:36.827959Z",
-     "start_time": "2024-12-05T19:29:36.823288Z"
+     "end_time": "2024-12-11T13:03:10.918218Z",
+     "start_time": "2024-12-11T13:03:10.914039Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "max_value = df['Data_Value'].max()\n",
-    "min_value = df['Data_Value'].min()\n",
+    "max_value = df['Sample_Size'].max()\n",
+    "min_value = df['Sample_Size'].min()\n",
     "\n",
     "print('Max:', max_value, 'Min:', min_value)"
    ],
@@ -210,7 +210,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Max: 86.17 Min: 0.0\n"
+      "Max: 71586.0 Min: 30.0\n"
      ]
     }
    ],
